--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -107,13 +107,31 @@
     <Content Include="assets\css\bootstrap-responsive.min.css" />
     <Content Include="assets\css\bootstrap.css" />
     <Content Include="assets\css\bootstrap.min.css" />
+    <Content Include="assets\css\style-2.css" />
     <Content Include="assets\css\style.css" />
+    <Content Include="assets\img\circle-1.jpg" />
+    <Content Include="assets\img\circle-1.png" />
+    <Content Include="assets\img\circle-2.jpg" />
+    <Content Include="assets\img\circle-2.png" />
+    <Content Include="assets\img\circle-3.png" />
     <Content Include="assets\img\fight-button.jpg" />
     <Content Include="assets\img\fight-button.png" />
     <Content Include="assets\img\glyphicons-halflings-white.png" />
     <Content Include="assets\img\glyphicons-halflings.png" />
+    <Content Include="assets\img\header-gradient.jpg" />
+    <Content Include="assets\img\hotel-home-image.png" />
+    <Content Include="assets\img\hotel-icon.png" />
+    <Content Include="assets\img\hotel-wins-icon.png" />
     <Content Include="assets\img\icons-hotel-and-taxi.png" />
+    <Content Include="assets\img\lightbulb-home-image.png" />
+    <Content Include="assets\img\logo.png" />
     <Content Include="assets\img\person-thinking.jpg" />
+    <Content Include="assets\img\search-icon.png" />
+    <Content Include="assets\img\taxi-home-image.png" />
+    <Content Include="assets\img\taxi-icon.png" />
+    <Content Include="assets\img\taxi-wins-icon.png" />
+    <Content Include="assets\img\text-logo-mobile.png" />
+    <Content Include="assets\img\text-logo-web.png" />
     <Content Include="assets\js\add2home.js" />
     <Content Include="assets\js\autocomplete.js" />
     <Content Include="assets\js\bootstrap.js" />
