--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -122,11 +122,14 @@
     <Content Include="assets\img\hotel-home-image.png" />
     <Content Include="assets\img\hotel-icon.png" />
     <Content Include="assets\img\hotel-wins-icon.png" />
+    <Content Include="assets\img\icon-app-v2.png" />
+    <Content Include="assets\img\icon-app.png" />
     <Content Include="assets\img\icons-hotel-and-taxi.png" />
     <Content Include="assets\img\lightbulb-home-image.png" />
     <Content Include="assets\img\logo.png" />
     <Content Include="assets\img\person-thinking.jpg" />
     <Content Include="assets\img\search-icon.png" />
+    <Content Include="assets\img\startscreen.png" />
     <Content Include="assets\img\taxi-home-image.png" />
     <Content Include="assets\img\taxi-icon.png" />
     <Content Include="assets\img\taxi-wins-icon.png" />
