--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -152,6 +152,7 @@
     <Content Include="assets\js\autocomplete.js" />
     <Content Include="assets\js\bootstrap.js" />
     <Content Include="assets\js\bootstrap.min.js" />
+    <Content Include="assets\js\fight.js" />
     <Content Include="assets\js\location.js" />
     <Content Include="assets\js\jquery-1.9.1.js" />
     <Content Include="assets\js\jquery-1.9.1.min.js" />
@@ -171,6 +172,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Results\Fight.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Taxi\Index.cshtml" />
