--- a/HotelOrTaxi/HotelOrTaxi.csproj
+++ b/HotelOrTaxi/HotelOrTaxi.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Models\ResultsViewModel.cs" />
     <Compile Include="Models\TaxisViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaxiViewModelFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\css\add2home.css" />
