--- a/LateRoomsScraper/LateRoomsScraper.csproj
+++ b/LateRoomsScraper/LateRoomsScraper.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IDownloadHtml.cs" />
     <Compile Include="IScraperResponse.cs" />
     <Compile Include="IScrapeWebsites.cs" />
+    <Compile Include="HtmlElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HotelScraperResponse.cs" />
     <Compile Include="ScraperResponseFactory.cs" />
