--- a/LateRoomsScraper/LateRoomsScraper.csproj
+++ b/LateRoomsScraper/LateRoomsScraper.csproj
@@ -35,9 +35,6 @@
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.6\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -45,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hotel.cs" />
-    <Compile Include="HotelCache.cs" />
+    <Compile Include="AspNetCache.cs" />
     <Compile Include="HotelScraper.cs" />
     <Compile Include="IDownloadHtml.cs" />
     <Compile Include="IScraperResponse.cs" />
