--- a/HotelOrTaxi/packages.config
+++ b/HotelOrTaxi/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
